src/styles/Home.module.scss
@import '_constants.scss';

.introSlide {
    height: 60vh;
    min-height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .title, .subTitle {
        margin: 1.3rem 0;
        color: white;
        font-family: "Josefin Slab", sans-serif;
        font-weight: 700;
        text-align: center;
        letter-spacing: 8px;
        text-shadow: 2px 2px black
    }
    .title {
        text-transform: uppercase;
        font-size: 45px;
    }
    .subTitle {
        font-size: 35px;
    }

}

.about {
    padding: 2rem 0;
    max-width: 900px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: auto;
    .headshot {
        width: 80%;
        max-width: 300px;
        border-radius: 50%;
    }
    .bio {
        width: 50%;
    }
    @media (max-width: 768px) {
        .bio {
            width: 100%;
            padding: 0 1rem;
        }
        .headshot {
            margin: 0 auto;
        }
    }
}

.projects, .upcoming {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.projectList {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: flex-end;
    max-width: 1200px;
    width: 100%;
}
.projectWrap {
    width: 30%;
    position: relative;
    min-width: 250px;
    margin: 1rem;
    &:hover {
        .projectInfo {
            display: flex;
        }
    }
}
.projectThumb {
    width: 100%;
}
.projectInfo {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(43, 43, 43, 0.8);
    color: $cream;
    display: none;
}
.contacts {
    display: flex;
    flex-wrap: wrap;
    background-color: $purple;
    justify-content: center;
    align-items: center;
    width: min-content;
    margin: 8rem auto;
    border-radius: 1.5rem;
    * {
        padding: 1rem 3rem;
    }
    a {
        color: $cream;
        font-size: 2rem;
        margin-bottom: 2rem;
    }
}
@media (max-width: 768px) {
    .contacts {

        a {
            font-size: 4vmin;
        }
    }

}
.gallery {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    .gallery-image {
        width: 20%;
        min-width: 250px;
        margin: 2rem;
    }
}

.upcoming {
    ul {
        li {
            list-style: none;
            font-weight: 400;
            font-size: 1.3rem;
            margin: 2rem;
        }
    }
}

@media (max-width: 768px) {
    .introSlide {
        .subTitle {
            font-size: 30px;
        }
    }
    .upcoming {
        ul {
            padding: 0;
            li {
                font-size: 1.1rem;
            }
        }
    }
}

